--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-passport-sequelize-handlebars-example",
+  "name": "eduson",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -12,16 +12,20 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "connect-ensure-login": "^0.1.1",
     "connect-session-sequelize": "^6.0.0",
     "cookie-parser": "^1.4.4",
     "csurf": "^1.9.0",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.6",
     "esm": "^3.2.25",
     "express": "^4.16.4",
     "express-handlebars": "^3.1.0",
     "express-session": "^1.16.1",
     "helmet": "^3.16.0",
+    "morgan": "^1.10.0",
     "mysql2": "^2.0.2",
+    "nodemon": "^2.0.16",
     "nunjucks": "^3.2.3",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
