--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "bootstrap-icons": "^1.8.3",
     "connect-ensure-login": "^0.1.1",
     "connect-session-sequelize": "^6.0.0",
     "cookie-parser": "^1.4.4",
