--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "eduson",
-  "version": "1.0.0",
-  "description": "",
+  "name": "CNAI",
+  "version": "1.1.0",
+  "description": "2022",
   "main": "index.js",
   "scripts": {
     "start": "node index",
-    "dev": "nodemon -e ejs,js,html app.js"
+    "dev": "nodemon -e ejs,js,html app.js",
+    "watch": "nodemon -e ejs,js,html"
   },
   "author": "",
   "license": "ISC",
@@ -24,13 +25,18 @@
     "express-handlebars": "^3.1.0",
     "express-session": "^1.16.1",
     "helmet": "^3.16.0",
+    "jquery-simplyscroll": "^2.1.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.0.2",
-    "nodemon": "^2.0.16",
     "nunjucks": "^3.2.3",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "sequelize": "^5.21.2",
     "sqlite3": "^5.0.2"
+  },
+  "devDependencies": {
+    "connect-livereload": "^0.6.1",
+    "livereload": "^0.9.3",
+    "nodemon": "^2.0.16"
   }
 }
