--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "sequelize": "^5.21.2",
+    "shufflejs": "^6.0.0",
     "sqlite3": "^5.0.2"
   },
   "devDependencies": {
